--- a/public/tracker.html
+++ b/public/tracker.html
@@ -26,6 +26,7 @@
           </div>
         </div>
       </nav>
+      <div id="alert-container" class="mt-3"></div>
       <div class="text-center my-2">
         <h1>All Vessels</h1>
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addVesselModal">New Vessel</button>
@@ -74,10 +75,10 @@
           </div>
         </div>
         <!-- End Modal -->
-        <button type="button" class="btn btn-danger">Remove All</button>
+        <button type="button" class="btn btn-danger" onclick="clearAllShips()">Remove All</button>
       </div>
-    <div id="cards">
-        <p class="text-center">Nothing here...</p>
+    <div id="card-container" class="my-5 row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+        <p class="text-center" id="no-ships">Nothing here...</p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   </body>
